--- a/15-nov-2022/index.html
+++ b/15-nov-2022/index.html
@@ -34,7 +34,7 @@
                 <span><a data-bs-toggle="modal" data-bs-target="#how-to">กดตรงนี้เพื่ออ่านวิธีปลูกจ้า</a></span><br><br>
 
                 <span>ตามหลักก็ควรจะต้องอวยพรด้วยสินะ</span><br>
-                <span>โตขึ้นอีกปีแล้ว ขอให้ใจเย็นขึ้น หัวร้อนน้อยลง</span><br>
+                <span>โตขึ้นอีกปีแล้ว ขอให้ใจเย็นขึ้น อย่าหัวร้อนบ่อย</span><br>
                 <span>ใจดีกับตัวเองเยอะๆ</span>
                 <span>อย่าไปกดดันตัวเองมาก</span><br>
                 <span>หวังว่าจะมีเรื่องทุกข์ใจน้อยลง</span><br><br>
