--- a/15-nov-2022/index.html
+++ b/15-nov-2022/index.html
@@ -36,7 +36,7 @@
                 <span>ตามหลักก็ควรจะต้องอวยพรด้วยสินะ</span><br>
                 <span>โตขึ้นอีกปีแล้ว ขอให้ใจเย็นขึ้น อย่าหัวร้อนบ่อย</span><br>
                 <span>ใจดีกับตัวเองเยอะๆ</span>
-                <span>อย่าไปกดดันตัวเองมาก</span><br>
+                <span>ไม่ต้องกดดันตัวเองมาก</span><br>
                 <span>หวังว่าจะมีเรื่องทุกข์ใจน้อยลง</span><br><br>
                 <span>พี่ซ่อมคอม ;D</span>   
                 
