--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="3; URL=15-nov-2022/index.html" />
+<meta http-equiv="refresh" content="3; URL=GachaGamer/index.html" />
 </head>
 <body>
   redirect...
